Add api client from openapi definition
