# front/api/api/batch/_batch_id@number/index.ts
@@ -1,0 +1,23 @@
+/* eslint-disable */
+import type * as Types from '../../../@types'
+
+export type Methods = {
+  delete: {
+    status: 200
+    /** successfully deleted */
+    resBody: Types.External2_Success
+  }
+
+  put: {
+    status: 200
+    /** successfully updated. */
+    resBody: Types.External0_Batch
+    reqBody: Types.External0_Batch
+  }
+
+  get: {
+    status: 200
+    /** return specific batch information */
+    resBody: Types.External2_Success
+  }
+}
